@@ -25487,6 +25487,10 @@ begin
       ValueToTake := ExtractFileDir(reencode(ParamStr(0), 'system'));
       FConstValuesList.add(ValueToTake);
 
+      FConstList.add('%OpsiscriptProcName%');
+      ValueToTake := opsiscriptProcName;
+      FConstValuesList.add(ValueToTake);
+
       FConstList.add('%WinstVersion%');
       ValueToTake := osconf.OpsiscriptVersion;
       FConstValuesList.add(ValueToTake);
